[tool.poetry]
name = "alterlab"
version = "2.0.0"
description = "Official Python SDK for the AlterLab Web Scraping API - Extract data from any website with intelligent anti-bot bypass"
authors = ["AlterLab <dev@alterlab.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://alterlab.io"
repository = "https://github.com/RapierCraft/AlterLab-SDK"
documentation = "https://alterlab.io/docs/sdk/python"
keywords = [
    "web-scraping",
    "scraping",
    "api",
    "data-extraction",
    "anti-bot",
    "javascript-rendering",
    "headless-browser",
    "proxy",
    "alterlab"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/RapierCraft/AlterLab-SDK/issues"
"Changelog" = "https://github.com/RapierCraft/AlterLab-SDK/releases"

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.6.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
